# school21-main-

miniRT/: .main 2.o.icloud  .miniRT 2.icloud  CMakeLists.txt  Makefile  main.c  miniRT  miniRT 2
miniRT/figure/: .new_sphere 2.o.icloud  new_sphere.c
miniRT/includes/: camera.h  minirt.h  minirt.h.gch  scene.h  sphere.h  sphere_intersection.h  utils.h  utils.h.gch  vector.h  vector.h.gch  view_plane.h
miniRT/intersection/: sphere_intersection.c
miniRT/raytracing/: .get_view_plane 2.o.icloud  get_view_plane.c  raytracing.c
miniRT/scene/: new_camera.c  new_scene.c
miniRT/utils/: .error_call 2.o.icloud  error_call.c  esc_exit.c  ft_exit.c
miniRT/vector_operations/: .vector_length 2.o.icloud  new_vector.c  vector_dot_product.c  vector_length.c  vector_normalize.c  vector_subtraction.c
push_swap/: CMakeLists.txt  a.out  ft_atoi.c  ft_error.c  ft_find_median.c  ft_pa.c  ft_parse_a.c  ft_pb.c  ft_ra.c  ft_rb.c  ft_rr.c  ft_rra.c  ft_rrb.c  ft_rrr.c  ft_sa.c  ft_sb.c  ft_sort.c  ft_sort_arr.c  ft_split.c  ft_ss.c  ft_strlen.c  ft_to_top.c  parse_str.c  push_swap.c  push_swap.h
push_swap(lists)/: CMakeLists.txt  Makefile  a.out  ft_error.c  ft_find_median.c  ft_find_place_value.c  ft_init_arr.c  ft_is_el_in_list.c  ft_is_in_place.c  ft_is_sorted_stack.c  ft_lstadd_back.c  ft_lstdel.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_pa.c  ft_parse.c  ft_parse_str.c  ft_part_of_the_stack.c  ft_pb.c  ft_ra.c  ft_rb.c  ft_rra.c  ft_rrr.c  ft_sa.c  ft_sb.c  ft_sort.c  ft_sort_arr.c  ft_sort_two_and_three.c  ft_ss.c  ft_to_top_in_stack.c  ft_top_el_wich_was_in_b.c  ft_transfer_from_a_to_b.c  ft_transfer_from_b_to_a.c  push_swap  push_swap.c  push_swap.h  test.c
push_swap(lists)/push_swap-master/: Makefile  README.md  checker  preparator  push_swap
push_swap(lists)/push_swap-master/include/: push_swap.h
push_swap(lists)/push_swap-master/scripts/: test.sh  visualizator.sh
push_swap(lists)/push_swap-master/src/: checker.c  (+18 more)
(+303 files in other folders)
