cmake_minimum_required(VERSION 3.19)
project(push_swap C)

set(CMAKE_C_STANDARD 99)

add_executable(push_swap.c
        ft_parse_a.c
        ft_atoi.c
        ft_strlen.c
        ft_error.c
        ft_sa.c
        ft_pb.c
        ft_ra.c
        ft_rra.c
        ft_pa.c
        ft_sb.c
        ft_rb.c
        ft_rrb.c
        ft_ss.c
        ft_rrr.c
        ft_split.c
        parse_str.c)